Updated life lemons with download buttons of build v0.4
- Included font awesome css and files for download glyphicons
- Included the builds of the game for all three mac, windows, and linux.
- Updated the lifeslemon project subpagee with download buttons and
links to the files.

--- a/On Site Files/public_html/styles/main.css
+++ b/On Site Files/public_html/styles/main.css
@@ -267,6 +267,26 @@ br.sm-only-break
   display: none;
 }
 
+.downloadIcon
+{
+  color: #171b41;
+}
+
+div.downloadIcons
+{
+  text-align: center;
+}
+
+.fa-border
+{
+  border-color: #171b41;
+  border-width: 2px;
+}
+
+.downloadIcon:hover
+{
+  color: #669df0;
+}
 
 
 
