--- a/On Site Files/public_html/styles/main.css
+++ b/On Site Files/public_html/styles/main.css
@@ -260,6 +260,13 @@ a:link, a:visited, a:hover, a:active
   margin: 5px 8px;
 }
 
+.gif-portrait
+{
+  /*width: 200px;*/
+  height: 360px;
+  margin: 0px 8px;
+}
+
 hr
 {
   border: 1px solid #171b41;
