--- a/On Site Files/public_html/styles/main.css
+++ b/On Site Files/public_html/styles/main.css
@@ -260,6 +260,12 @@ a:link, a:visited, a:hover, a:active
   margin: 5px 8px;
 }
 
+.gif-landscape
+{
+  height: 360px;
+  margin: 0px 8px;
+}
+
 .gif-portrait
 {
   /*width: 200px;*/
