Added LSG work experience to portfolio
Makes it easier for me to share my experience at LSG!

--- a/_public/styles/main.css
+++ b/_public/styles/main.css
@@ -369,6 +369,11 @@ div.downloadIcons
     display: inline;
     float: none;
   }
+  
+  .container-sm ul li
+  {
+    text-align: left;
+  }
 
   .container-sm
   {
