--- a/_public/styles/main.css
+++ b/_public/styles/main.css
@@ -270,7 +270,10 @@ a:link, a:visited, a:hover, a:active
 .screenshot-portrait
 {
   width: 320px;
-  margin: 5px 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .gif-landscape
